# Plancksoft-Game-Engine

./: .gitignore  CMakeLists.txt
Scripts/: FetchLibraries.cmake
Source/: CMakeLists.txt  main.cpp
Source/EditorApplication/: main.cpp
Source/Object/: Camera.cpp  Camera.h  Cube.h  DataStructures.h  Object.cpp  Object.h
Source/Object/ObjectTypes/: Cube.cpp  Cube.h  Sphere.h  Triangle.h
Source/Renderer/: Renderer.cpp  Renderer.h  RendererManager.h
Source/Runtime/World/: Fox.cpp  Fox.h  Helmet.cpp  Lantern.cpp
Source/Shaders/: PixelShader.hlsl  VertexShader.hlsl
Source/Window/: Window.cpp  Window.h
